# AI-powered-Customer-Success-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  playwright.config.ts
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_soft_delete_customers.py  0003_interaction_type_index.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/enums/: __init__.py  customer_status.py  interaction_type.py  sentiment_type.py  user_role.py
backend/app/exceptions/: __init__.py  base.py  handlers.py
backend/app/middleware/: logging.py  security.py
backend/app/models/: __init__.py  ai_insight.py  customer.py  interaction.py  user.py
backend/app/repositories/: __init__.py  ai_insight_repository.py  base.py  customer_repository.py  dashboard_repository.py  interaction_repository.py  user_repository.py
backend/app/schemas/: __init__.py  ai_insight.py  auth.py  common.py  customer.py  dashboard.py  interaction.py  user.py
backend/app/services/: __init__.py  ai_insight_service.py  auth_service.py  customer_service.py  dashboard_service.py  interaction_service.py  redis_service.py  user_management_service.py
backend/app/utils/: response.py
backend/tests/: conftest.py  test_auth.py  test_cache.py  test_customers.py  test_dashboard.py  test_health.py  test_insights.py  test_interactions.py  test_security.py  test_users.py
(+181 files in other folders)
