[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csp-backend"
version = "0.1.0"
description = "AI-Powered Customer Success Platform — Backend"
requires-python = ">=3.12"

# ── Ruff (lint + format) ────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = [
  "E501",  # line-length (handled by formatter)
  "B008",  # no function calls in default args (FastAPI Depends pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ── Mypy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true

# ── Pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers -q"

# ── Coverage ────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*", "*/__init__.py"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "@overload",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"
